# video-ball-tracking

./: .gitignore  README.md  overlays.py  pyproject.toml  runpod_setup.sh  track_ball.py  track_ball_sam3.py  track_live.py  tracker.py  train.py
trackers/: bytetrack_ball.yaml
